# requote

./: .gitignore  Cargo.toml  README.md  build.rs  prompt  test.sh
.github/workflows/: binary-release.yml
examples/: double_quotes_example.py.sav  ensure-branch-naming.py.sav  mixed_quotes_example.py  single_quotes_example.py
src/: main.rs
